ChangeLog for TDB
=================

==== 0.8.5

+ Dynamic datasets : use the dataset description in a query (FROM/FROM NAMED) to 
  restrict the behaviour of the query execution to just those graphs.
    Default graph can be the set union of several graphs (use multiple FROM)
    Multiple named graphs (multiple FROM NAMED) restricts visibility of named graphs.
    
    This is a change in behvaiour from earlier versions where a dataset 
    description was ignored or a generalpurpose query executed (graphs pulled 
    from the web). 
+ Fix XML of the POM file.
+ Add a shutdown hook to sync datasets (don't rely on it!)
+ Adding checking for concurrenct modification situations.
  TDB supports multiple readers OR single writer.
  See also java.util collections.   

==== 0.8.4

+ Experimental: filtering of quads (to support dynamic datasets and graph masking at some time).
+ Include src-examples in sources shipped.
+ Bug fix: Turtle and N-triples reader could use the blank nod elbal as given, 
  not treat as a per run scoped label.    

==== 0.8.3

+ Concurrency fixes
+ Speed up reforming nodes from the on-disk representation.
+ (From ARQ) Speed up complex nested optionals.  BSBM now works on all thier dataset sizes.
+ Speed up basic processing of DateTime nodes (avoid using String.format to remake lexcial forms!) 

+ Bug fix: If the query has a dataset description, this was ignored.  
  Now if the query has a dataset description (FROM, FROM NAMED) then
  an in-memory query execution is done on the loaded files and the TDB
  dataset is ignored.

==== 0.8.2

+ TDB-backed graphs at the same location now use the shared dataset.
  This means all created modesl in a JVM shared TDB caches.
  
+ All tables now created even for just a graph or model
  (including the named graph quad tables).

+ Bug fix: asking the size of a empty graph before any other operation would make the size zero 
  for the rest of the lifetime of the in-memory graph.  No data corruption on disk.
